backend/vulnerability_analysis/testing/oob1/segments/klee-out-1/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7f7ee8400000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7f7c68400000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7e7c68400000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7e5c68400000 size=128 GiB)
KLEE: ERROR: testing/oob2/segments/segment_2_klee.c:27: failed external call: __ubsan_handle_out_of_bounds
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: testing/oob2/segments/segment_2_klee.c:25: failed external call: __ubsan_handle_out_of_bounds
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: libc/string/strlen.c:22: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
